fixed staking and overlap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,7 @@ body,html {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-left: 25px;
+    margin-left: 5px;
     img{
       
     padding: 0px;
@@ -86,6 +86,7 @@ body,html {
 
 .topBar .logo {
   max-height: 90%;
+  max-width: 200px;
 }
 
 .information {
@@ -123,7 +124,7 @@ body,html {
   color: #fff;
   border: none;
   box-shadow: 0px 0px 7px -1px #000;
-  padding: 10px 20px;
+  padding: 20px 10px;
   border-radius: 9px;
   font-size: 12px;
   text-transform: uppercase;
@@ -137,7 +138,7 @@ body,html {
 .disconnect {
   position: fixed;
   right: 10px;
-  top: 10px;
+  top: 20px;
   z-index: 9999;
 }
 
@@ -146,7 +147,7 @@ body,html {
   color: #fff;
   border: none;
   box-shadow: 0px 0px 7px -1px #000;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 9px;
   font-size: 12px;
   text-transform: uppercase;
@@ -170,7 +171,7 @@ body,html {
 }
 
 .ele .token img {
-  width: 118px;
+  width: 110px;
   position: relative;
   bottom: -18px;
 }
@@ -178,7 +179,7 @@ body,html {
 .ele .token span {
   font-size: 17px;
   color: #fff;
-  padding: 5px 18px;
+  padding: 10px 10px;
   box-shadow: 0px 0px 7px -2px #fff;
 }
 
